# crash-reporter

./: CMakeLists.txt  crash-reporter.pro
resources/: resources.qrc
src/: CrashReporterDialog.cpp  CrashReporterDialog.h  CrashReporterDialog.ui  main.cpp
